--- a/portfolio.css
+++ b/portfolio.css
@@ -31,7 +31,7 @@ body {
   color: white;
 }
 
-.row {  
+.row {
   display: flex;
   flex-wrap: wrap;
 }
@@ -60,7 +60,7 @@ body {
   width: 100%;
   height: 460px;
   border-style: solid;
-  border-color:  #585c5b41;
+  border-color: #585c5b41;
 }
 
 .myImage {
@@ -70,13 +70,13 @@ body {
   justify-content: center;
 }
 .myImage > img {
-    height: 300px;
+  height: 300px;
 }
 
 .footer {
-	padding : 1px;
-    text-align: center;
-    background-color: #333; 
+  padding: 1px;
+  text-align: center;
+  background-color: #333;
 }
 .footer > h4 {
   color: white;
@@ -85,7 +85,8 @@ body {
 /* Responsive layout - when the screen is less than 700px wide, make the 
 two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-  .row, .navbar {   
+  .row,
+  .navbar {
     flex-direction: column;
   }
 }
