--- a/portfolio.css
+++ b/portfolio.css
@@ -40,6 +40,9 @@ body {
 /* Sidebar/left column */
 .side {
   flex: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #ebe9e9;
   padding: 20px;
 }
@@ -52,10 +55,15 @@ body {
 }
 
 .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   background-color: #585c5b41;
   width: 97%;
-  padding: 20px;
+  padding: 8px;
 }
+
 .box > img {
   width: 100%;
   height: 460px;
@@ -63,13 +71,7 @@ body {
   border-color: #585c5b41;
 }
 
-.myImage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-.myImage > img {
+.side > img {
   height: 300px;
 }
 
